[gd_scene load_steps=3 format=1]

[ext_resource path="res://ui/gen_preset.gd" type="Script" id=1]
[ext_resource path="res://ui/skill_button.tscn" type="PackedScene" id=2]

[node name="gen_preset" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 25.0
margin/top = 340.0
margin/right = 169.0
margin/bottom = 535.0
script/script = ExtResource( 1 )

[node name="pick_preset" type="OptionButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = -75.0
margin/right = 101.0
margin/bottom = -35.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="pick_type" type="OptionButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1.0
margin/top = -27.0
margin/right = 101.0
margin/bottom = 13.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="pick_skill_panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -3.0
margin/top = 19.0
margin/right = 137.0
margin/bottom = 69.0

[node name="pick_skill" type="OptionButton" parent="pick_skill_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 4.0
margin/top = 5.0
margin/right = 105.0
margin/bottom = 45.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false
align = 0
selected = -1
items = [  ]

[node name="add_skill" type="Button" parent="pick_skill_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 109.0
margin/top = 15.0
margin/right = 137.0
margin/bottom = 35.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "+"
flat = false

[node name="picked_skill" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -1.0
margin/top = 73.0
margin/right = 110.0
margin/bottom = 193.0

[node name="scroll" type="ScrollContainer" parent="picked_skill"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 1.0
margin/right = 111.0
margin/bottom = 124.0
scroll/horizontal = true
scroll/vertical = true

[node name="skill_queue" type="VBoxContainer" parent="picked_skill/scroll"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
custom_constants/separation = 1
alignment = 0

[node name="skill_button" parent="picked_skill/scroll/skill_queue" instance=ExtResource( 2 )]

visibility/visible = false
margin/left = 0.0
margin/top = 0.0
margin/right = 12.0
margin/bottom = 20.0

[node name="save" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 105.0
margin/top = -75.0
margin/right = 146.0
margin/bottom = -35.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "save"
flat = false

[node name="new_preset_dialog" type="PopupDialog" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 99.0
margin/top = -63.0
margin/right = 277.0
margin/bottom = 57.0
popup/exclusive = true

[node name="Label" type="Label" parent="new_preset_dialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 21.0
margin/top = 21.0
margin/right = 160.0
margin/bottom = 40.0
text = "set new preset name"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="preset_name" type="LineEdit" parent="new_preset_dialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 47.0
margin/right = 160.0
margin/bottom = 71.0
placeholder/alpha = 0.6
focus_mode = 2
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="ok" type="Button" parent="new_preset_dialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 68.0
margin/top = 82.0
margin/right = 112.0
margin/bottom = 102.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "ok"
flat = false

[connection signal="item_selected" from="pick_preset" to="." method="_on_pick_preset_item_selected"]

[connection signal="pressed" from="pick_skill_panel/add_skill" to="." method="_on_add_skill_pressed"]

[connection signal="pressed" from="save" to="." method="_on_save_pressed"]

[connection signal="pressed" from="new_preset_dialog/ok" to="." method="_on_ok_pressed"]


